@@ -46,6 +46,7 @@ class Image
 		$size,          # Size in bytes (loadFromXxx)
 		$metadata,      # Metadata
 		$dataLoaded,    # Whether or not all this has been loaded from the database (loadFromXxx)
+		$page,		# Page to render when creating thumbnails
 		$lastError;     # Error string associated with a thumbnail display error
 
 
@@ -86,6 +87,7 @@ class Image
 		$this->extension = Image::normalizeExtension( $n ?
 			substr( $this->name, $n + 1 ) : '' );
 		$this->historyLine = 0;
+		$this->page = 1;
 
 		$this->dataLoaded = false;
 	}
@@ -307,7 +309,11 @@ class Image
 		$this->dataLoaded = true;
 
 
-		$this->metadata = serialize( $this->retrieveExifData( $this->imagePath ) );
+		if ( $this->mime == 'image/vnd.djvu' ) {
+			$this->metadata = $deja->retrieveMetaData();
+		} else {
+			$this->metadata = serialize( $this->retrieveExifData( $this->imagePath ) );
+		}
 
 		if ( isset( $gis['bits'] ) )  $this->bits = $gis['bits'];
 		else $this->bits = 0;
@@ -323,7 +329,6 @@ class Image
 		wfProfileIn( __METHOD__ );
 
 		$dbr =& wfGetDB( DB_SLAVE );
-
 		$this->checkDBSchema($dbr);
 
 		$row = $dbr->selectRow( 'image',
@@ -605,7 +610,7 @@ class Image
 	 * @todo remember the result of this check.
 	 */
 	function canRender() {
-		global $wgUseImageMagick;
+		global $wgUseImageMagick, $wgDjvuRenderer;
 
 		if( $this->getWidth()<=0 || $this->getHeight()<=0 ) return false;
 
@@ -651,6 +656,7 @@ class Image
 			if ( $mime === 'image/vnd.wap.wbmp'
 			  || $mime === 'image/x-xbitmap' ) return true;
 		}
+		if ( $mime === 'image/vnd.djvu' && isset( $wgDjvuRenderer ) && $wgDjvuRenderer ) return true;
 
 		return false;
 	}
@@ -738,9 +744,16 @@ class Image
 	 * Return the escapeLocalURL of this image
 	 * @public
 	 */
-	function getEscapeLocalURL() {
+	function getEscapeLocalURL( $query=false) {
 		$this->getTitle();
-		return $this->title->escapeLocalURL();
+		if ( $query === false ) {
+			if ( $this->page != 1 ) {
+				$query = 'page=' . $this->page;
+			} else {
+				$query = '';
+			}
+		}
+		return $this->title->escapeLocalURL( $query );
 	}
 
 	/**
@@ -840,6 +853,9 @@ class Image
 	 */
 	function thumbName( $width ) {
 		$thumb = $width."px-".$this->name;
+		if ( $this->page != 1 ) {
+			$thumb = "page{$this->page}-$thumb";
+		}
 
 		if( $this->mustRender() ) {
 			if( $this->canRender() ) {
@@ -1127,6 +1143,7 @@ class Image
 		global $wgSVGConverters, $wgSVGConverter;
 		global $wgUseImageMagick, $wgImageMagickConvertCommand;
 		global $wgCustomConvertCommand;
+		global $wgDjvuRenderer, $wgDjvuPostProcessor;
 
 		$this->load();
 
@@ -1153,96 +1170,112 @@ class Image
 				$err = wfShellExec( $cmd, $retval );
 				wfProfileOut( 'rsvg' );
 			}
-		} elseif ( $wgUseImageMagick ) {
-			# use ImageMagick
-			
-			if ( $this->mime == 'image/jpeg' ) {
-				$quality = "-quality 80"; // 80%
-			} elseif ( $this->mime == 'image/png' ) {
-				$quality = "-quality 95"; // zlib 9, adaptive filtering
-			} else {
-				$quality = ''; // default
-			}
-
-			# Specify white background color, will be used for transparent images
-			# in Internet Explorer/Windows instead of default black.
-
-			# Note, we specify "-size {$width}" and NOT "-size {$width}x{$height}".
-			# It seems that ImageMagick has a bug wherein it produces thumbnails of
-			# the wrong size in the second case.
-			
-			$cmd  =  wfEscapeShellArg($wgImageMagickConvertCommand) .
-				" {$quality} -background white -size {$width} ".
-				wfEscapeShellArg($this->imagePath) .
-				// Coalesce is needed to scale animated GIFs properly (bug 1017).
-				' -coalesce ' .
-				// For the -resize option a "!" is needed to force exact size,
-				// or ImageMagick may decide your ratio is wrong and slice off
-				// a pixel.
-				" -resize " . wfEscapeShellArg( "{$width}x{$height}!" ) .
-				" -depth 8 " .
-				wfEscapeShellArg($thumbPath) . " 2>&1";
-			wfDebug("reallyRenderThumb: running ImageMagick: $cmd\n");
-			wfProfileIn( 'convert' );
-			$err = wfShellExec( $cmd, $retval );
-			wfProfileOut( 'convert' );
-		} elseif( $wgCustomConvertCommand ) {
-			# Use a custom convert command
-			# Variables: %s %d %w %h
-			$src = wfEscapeShellArg( $this->imagePath );
-			$dst = wfEscapeShellArg( $thumbPath );
-			$cmd = $wgCustomConvertCommand;
-			$cmd = str_replace( '%s', $src, str_replace( '%d', $dst, $cmd ) ); # Filenames
-			$cmd = str_replace( '%h', $height, str_replace( '%w', $width, $cmd ) ); # Size
-			wfDebug( "reallyRenderThumb: Running custom convert command $cmd\n" );
-			wfProfileIn( 'convert' );
-			$err = wfShellExec( $cmd, $retval );
-			wfProfileOut( 'convert' );
 		} else {
-			# Use PHP's builtin GD library functions.
-			#
-			# First find out what kind of file this is, and select the correct
-			# input routine for this.
+			if ( $this->mime === "image/vnd.djvu" && $wgDjvuRenderer ) {
+				// DJVU image
+				// The file contains several images. First, extract the
+				// page in hi-res, if it doesn't yet exist. Then, thumbnail
+				// it.
 
-			$typemap = array(
-				'image/gif'          => array( 'imagecreatefromgif',  'palette',   'imagegif'  ),
-				'image/jpeg'         => array( 'imagecreatefromjpeg', 'truecolor', array( &$this, 'imageJpegWrapper' ) ),
-				'image/png'          => array( 'imagecreatefrompng',  'bits',      'imagepng'  ),
-				'image/vnd.wap.wmbp' => array( 'imagecreatefromwbmp', 'palette',   'imagewbmp'  ),
-				'image/xbm'          => array( 'imagecreatefromxbm',  'palette',   'imagexbm'  ),
-			);
-			if( !isset( $typemap[$this->mime] ) ) {
-				$err = 'Image type not supported';
-				wfDebug( "$err\n" );
-				return $err;
-			}
-			list( $loader, $colorStyle, $saveType ) = $typemap[$this->mime];
+				$cmd = "{$wgDjvuRenderer} -page={$this->page} -size=${width}x${height} " .
+					wfEscapeShellArg( $this->imagePath ) . 
+					" | {$wgDjvuPostProcessor} > " . wfEscapeShellArg($thumbPath);
+				wfProfileIn( 'ddjvu' );
+				wfDebug( "reallyRenderThumb DJVU: $cmd\n" );
+				$err = wfShellExec( $cmd, $retval );
+				wfProfileOut( 'ddjvu' );
 
-			if( !function_exists( $loader ) ) {
-				$err = "Incomplete GD library configuration: missing function $loader";
-				wfDebug( "$err\n" );
-				return $err;
-			}
-			if( $colorStyle == 'palette' ) {
-				$truecolor = false;
-			} elseif( $colorStyle == 'truecolor' ) {
-				$truecolor = true;
-			} elseif( $colorStyle == 'bits' ) {
-				$truecolor = ( $this->bits > 8 );
-			}
+			} elseif ( $wgUseImageMagick ) {
+				# use ImageMagick
+			
+				if ( $this->mime == 'image/jpeg' ) {
+					$quality = "-quality 80"; // 80%
+				} elseif ( $this->mime == 'image/png' ) {
+					$quality = "-quality 95"; // zlib 9, adaptive filtering
+				} else {
+					$quality = ''; // default
+				}
 
-			$src_image = call_user_func( $loader, $this->imagePath );
-			if ( $truecolor ) {
-				$dst_image = imagecreatetruecolor( $width, $height );
+				# Specify white background color, will be used for transparent images
+				# in Internet Explorer/Windows instead of default black.
+	
+				# Note, we specify "-size {$width}" and NOT "-size {$width}x{$height}".
+				# It seems that ImageMagick has a bug wherein it produces thumbnails of
+				# the wrong size in the second case.
+				
+				$cmd  =  wfEscapeShellArg($wgImageMagickConvertCommand) .
+					" {$quality} -background white -size {$width} ".
+					wfEscapeShellArg($this->imagePath) .
+					// Coalesce is needed to scale animated GIFs properly (bug 1017).
+					' -coalesce ' .
+					// For the -resize option a "!" is needed to force exact size,
+					// or ImageMagick may decide your ratio is wrong and slice off
+					// a pixel.
+					" -resize " . wfEscapeShellArg( "{$width}x{$height}!" ) .
+					" -depth 8 " .
+					wfEscapeShellArg($thumbPath) . " 2>&1";
+				wfDebug("reallyRenderThumb: running ImageMagick: $cmd\n");
+				wfProfileIn( 'convert' );
+				$err = wfShellExec( $cmd, $retval );
+				wfProfileOut( 'convert' );
+			} elseif( $wgCustomConvertCommand ) {
+				# Use a custom convert command
+				# Variables: %s %d %w %h
+				$src = wfEscapeShellArg( $this->imagePath );
+				$dst = wfEscapeShellArg( $thumbPath );
+				$cmd = $wgCustomConvertCommand;
+				$cmd = str_replace( '%s', $src, str_replace( '%d', $dst, $cmd ) ); # Filenames
+				$cmd = str_replace( '%h', $height, str_replace( '%w', $width, $cmd ) ); # Size
+				wfDebug( "reallyRenderThumb: Running custom convert command $cmd\n" );
+				wfProfileIn( 'convert' );
+				$err = wfShellExec( $cmd, $retval );
+				wfProfileOut( 'convert' );
 			} else {
-				$dst_image = imagecreate( $width, $height );
+				# Use PHP's builtin GD library functions.
+				#
+				# First find out what kind of file this is, and select the correct
+				# input routine for this.
+	
+				$typemap = array(
+					'image/gif'          => array( 'imagecreatefromgif',  'palette',   'imagegif'  ),
+					'image/jpeg'         => array( 'imagecreatefromjpeg', 'truecolor', array( &$this, 'imageJpegWrapper' ) ),
+					'image/png'          => array( 'imagecreatefrompng',  'bits',      'imagepng'  ),
+					'image/vnd.wap.wmbp' => array( 'imagecreatefromwbmp', 'palette',   'imagewbmp'  ),
+					'image/xbm'          => array( 'imagecreatefromxbm',  'palette',   'imagexbm'  ),
+				);
+				if( !isset( $typemap[$this->mime] ) ) {
+					$err = 'Image type not supported';
+					wfDebug( "$err\n" );
+					return $err;
+				}
+				list( $loader, $colorStyle, $saveType ) = $typemap[$this->mime];
+
+				if( !function_exists( $loader ) ) {
+					$err = "Incomplete GD library configuration: missing function $loader";
+					wfDebug( "$err\n" );
+					return $err;
+				}
+				if( $colorStyle == 'palette' ) {
+					$truecolor = false;
+				} elseif( $colorStyle == 'truecolor' ) {
+					$truecolor = true;
+				} elseif( $colorStyle == 'bits' ) {
+					$truecolor = ( $this->bits > 8 );
+				}
+
+				$src_image = call_user_func( $loader, $this->imagePath );
+				if ( $truecolor ) {
+					$dst_image = imagecreatetruecolor( $width, $height );
+				} else {
+					$dst_image = imagecreate( $width, $height );
+				}
+				imagecopyresampled( $dst_image, $src_image,
+							0,0,0,0,
+							$width, $height, $this->width, $this->height );
+				call_user_func( $saveType, $dst_image, $thumbPath );
+				imagedestroy( $dst_image );
+				imagedestroy( $src_image );
 			}
-			imagecopyresampled( $dst_image, $src_image,
-						0,0,0,0,
-						$width, $height, $this->width, $this->height );
-			call_user_func( $saveType, $dst_image, $thumbPath );
-			imagedestroy( $dst_image );
-			imagedestroy( $src_image );
 		}
 
 		#
@@ -1712,7 +1745,7 @@ class Image
 
 	function getExifData() {
 		global $wgRequest;
-		if ( $this->metadata === '0' )
+		if ( $this->metadata === '0' || $this->mime == 'image/vnd.djvu' )
 			return array();
 
 		$purge = $wgRequest->getVal( 'action' ) == 'purge';
@@ -2209,6 +2242,52 @@ class Image
 		}
 		
 		return $revisions;
+	}
+
+	/**
+	 * Select a page from a multipage document. Determines the page used for
+	 * rendering thumbnails.
+	 *
+	 * @param $page Integer: page number, starting with 1
+	 */
+	function selectPage( $page ) {
+		wfDebug( __METHOD__." selecting page $page \n" );
+		$this->page = $page;
+		if ( ! $this->dataLoaded ) {
+			$this->load();
+		}
+		if ( ! isset( $this->multiPageXML ) ) {
+			$this->multiPageXML = new SimpleXMLElement( $this->metadata );
+		}
+		$o = $this->multiPageXML->BODY[0]->OBJECT[$page-1];
+		$this->height = intval( $o['height'] );
+		$this->width = intval( $o['width'] );
+		wfDebug( __METHOD__." >>>>METADATA>>>>\n".$o->asXML() . "\n<<<<<<<\n\n" );
+		wfDebug( __METHOD__." >>>>XML OBJECT>>>>\n". print_r($o,true) . "\n<<<<<<<\n\n" );
+	}
+
+	/**
+	 * Returns 'true' if this image is a multipage document, e.g. a DJVU
+	 * document.
+	 *
+	 * @return Bool
+	 */
+	function isMultipage() {
+		return ( $this->mime == 'image/vnd.djvu' );
+	}
+
+	/**
+	 * Returns the number of pages of a multipage document, or NULL for
+	 * documents which aren't multipage documents
+	 */
+	function pageCount() {
+		if ( ! $this->isMultipage() ) {
+			return null;
+		}
+		if ( ! isset( $this->multiPageXML ) ) {
+			$this->multiPageXML = new SimpleXMLElement( $this->metadata );
+		}
+		return count( $this->multiPageXML->xpath( '//OBJECT' ) );
 	}
 	
 } //class
